--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#Configurações do Banco de Dados
+
+#datasource
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/siteviagens
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.testingWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
 
